[package]
name = "chain-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tempfile = "3.2.0"

[dependencies]
async-trait = "0.1"
pingora = "0.3.0"
pingora-openssl = "0.3.0"
pingora-http = "0.3.0"
pingora-load-balancing = { version = "0.3.0" }
pingora-pool = "0.3.0"
pingora-proxy = { version = "0.3.0" }
log = "0.4.21"
structopt = "0.3.26"
env_logger = "0.11.3"
http = "1.1.0"
pretty_env_logger = "0.5"
jemallocator = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
lazy_static = "1.4.0"
url = "2.2.2"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.116"
once_cell = "1.19.0"
reqwest = "0.12.4"
log4rs = "1.3.0"
clap = { version = "3.2.25", features = ["derive"] }
rand = "0.8.5"
prometheus = "0.13.3"